src/test/ui/consts/control-flow/short-circuit.stock.stderr
error: any use of this value will cause an error
  --> $DIR/short-circuit.rs:10:25
   |
LL | const _: bool = true || panic!();
   | ------------------------^^^^^^^^-
   |                         |
   |                         the evaluated program panicked at 'explicit panic', $DIR/short-circuit.rs:10:25
   |
   = note: `#[deny(const_err)]` on by default
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/short-circuit.rs:11:26
   |
LL | const _: bool = false && panic!();
   | -------------------------^^^^^^^^-
   |                          |
   |                          the evaluated program panicked at 'explicit panic', $DIR/short-circuit.rs:11:26
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

